tests/ui/uninhabited/uninhabited-patterns.stderr
error: unreachable pattern
  --> $DIR/uninhabited-patterns.rs:27:9
   |
LL |         &[..] => (),
   |         ^^^^^^^^^^^ this arm is never executed
   |
note: the lint level is defined here
  --> $DIR/uninhabited-patterns.rs:6:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: multiple unreachable patterns
  --> $DIR/uninhabited-patterns.rs:32:9
   |
LL |         Ok(box _) => (),
   |         ^^^^^^^^^^^^^^^ this arm is never executed
...
LL |         Err(&[..]) => (),
   |         ^^^^^^^^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/uninhabited-patterns.rs:44:9
   |
LL |         Err(Ok(_y)) => (),
   |         ^^^^^^^^^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/uninhabited-patterns.rs:49:15
   |
LL |     while let Some(_y) = foo() {
   |               ^^^^^^^^ this pattern is unreachable

error: aborting due to 4 previous errors

